Fixes issue with overflow in queue management

--- a/public/stylesheets/admin-queue-style.css
+++ b/public/stylesheets/admin-queue-style.css
@@ -65,10 +65,12 @@ h2 {
 /* Sub container 1 */
 
 .title {
-    font-size: 1.8rem;
+    font-size: 28px;
+    height: 30px;
     font-weight: bold;
     text-align: center;
     margin-left: 7px;
+    overflow: hidden;
 }
 
 /* Sub container 2 */
@@ -93,6 +95,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    overflow: hidden;
 
     height: 65px;
     width: 100%;
@@ -104,12 +107,16 @@ h2 {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    height: 30px;
 }
     
 
 .command-infos > p {
     margin-right: 5px;
     font-size: 1.4rem;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .command-time-container, .command-price-container {
